Deploy/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - image: grafana/grafana:latest
          name: grafana
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
      restartPolicy: Always
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-storage
status: {}
