Deploy/golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: golang
  name: golang
spec:
  ports:
    - name: "8086"
      port: 8086
      targetPort: 8086
    - name: "9100"
      port: 9100
      targetPort: 9100
  selector:
    io.kompose.service: golang
  type: LoadBalancer
